@@ -41,16 +41,14 @@ index 527119a..345fe8b 100644
  /**
   * lookup_one_len - filesystem helper to lookup single pathname component
 diff --git a/fs/namespace.c b/fs/namespace.c
-index 2dd333b..7ac67ea 100644
+index 2dd333b..ec727da 100644
 --- a/fs/namespace.c
 +++ b/fs/namespace.c
-@@ -38,6 +38,9 @@
+@@ -38,6 +38,7 @@
  
  /* spinlock for vfsmount related operations, inplace of dcache_lock */
  __cacheline_aligned_in_smp DEFINE_SPINLOCK(vfsmount_lock);
-+#ifdef CONFIG_AUFS_EXPORT
 +EXPORT_SYMBOL(vfsmount_lock);
-+#endif
  
  static int event;
  static DEFINE_IDA(mnt_id_ida);
